# bot-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env  Dockerfile  README.md  aerich.ini  docker-compose-debug.yaml  docker-entrypoint.sh  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: main.py  settings.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/models/: models.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{projectname}}/: pyproject.toml
