[tool.poetry]
name = "{{projectname}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"
python-dotenv = "^0.20.0"
aioredis = "^2.0.1"
aerich = "^0.6.3"
tortoise-orm = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
